tests/cases/compiler/primitiveTypeAsClassName/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/primitiveTypeAsClassName.ts`, Apache-2.0 License

class any {}
//~^ ERROR: Class name cannot be 'any'.